# bills-pc

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md  bills-pc.py  lib_test.py
include/: CMakeLists.txt
include/sqlite/: sqlite3.h
scripts/: build_db.sql  lib_test.py  populate_db.py
src/: Pokemon.cpp  Pokemon.hpp  Species.hpp  database.cpp  database.hpp  db_interface.cpp  db_interface.hpp  lib.cpp
